# mcp-vector-search

./: .gitignore  LICENSE  README.md  local-mcp-semantic-search-setup.md  pyproject.toml
infra/qdrant/: docker-compose.yml  qdrant.service
src/mcp_vector_search/: _rag_runtime.py  _registry.py
src/mcp_vector_search/code_search/: cli.py  server.py  store.py
src/mcp_vector_search/docs_search/: chunker.py  cli.py  config.py  embedder.py  ingester.py  server.py
src/mcp_vector_search/project_rag_cli/: cli.py
