[project]
name = "mcp-vector-search"
version = "0.1.0"
description = "Local MCP semantic-search tools: document search (Qdrant) and a project-rag CLI wrapper."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.0",
    "fastembed>=0.4",
    "qdrant-client>=1.9",
    "typer>=0.12",
    "mcp>=1.0",
    "sentence-transformers>=3.0",
    "onnxruntime>=1.20",
    "platformdirs>=4.0",
]

[project.scripts]
docs-search = "mcp_vector_search.docs_search.cli:app"
docs-search-mcp = "mcp_vector_search.docs_search.server:main"
code-search-cli = "mcp_vector_search.code_search.cli:app"
code-search-mcp = "mcp_vector_search.code_search.server:main"
project-rag-cli = "mcp_vector_search.project_rag_cli.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_vector_search"]

[dependency-groups]
dev = []
